# pal_motion_loader

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
scripts/: load_available_motions.py
